# wondertrader_qdp

./: README.md
API_QDP7.0.0/QDP7.0.0/: QdpFtdcUserApiStruct.h  error.dtd
API_QDP7.0.0/QDP7.0.0/x64/: qdptraderapi.lib
API_QDP7.0.0/QDP7.0.0/x86/: qdptraderapi.lib
ParserQDP/: CMakeLists.txt  ParserQDP.cpp  ParserQDP.h  ParserQDP.vcxproj  ParserQDP.vcxproj.filters
ParserQDP/Win32/Debug/: vc141.idb
ParserQDP/Win32/Debug/ParserQDP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ParserQDP.lastbuildstate  ParserQDP.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
QDP7.0.0/: QdpFtdcTraderApi.h  QdpFtdcUserApiDataType.h  error.xml
QDP7.0.0/x64/: qdpdatacollectapi.lib
QDP7.0.0/x86/: qdmdapi.lib
TraderQDP/: CMakeLists copy.txt  CMakeLists.txt  TraderQDP.cpp  TraderQDP.cpp.bak  TraderQDP.h  TraderQDP.h.bak  TraderQDP.vcxproj  TraderQDP.vcxproj.filters
TraderQDP/Win32/Debug/: vc141.idb
TraderQDP/Win32/Debug/TraderQDP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TraderQDP.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
